--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "rxjs": "~6.6.0",
+    "tailwind-scrollbar-hide": "^1.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
